--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "typescript": "~4.3.2"
   },
-  "engine": {
+  "engines": {
     "node": "14.x",
     "npm": "8.x"
   }
